--- a/pagecode.html
+++ b/pagecode.html
@@ -85,6 +85,9 @@
             </div>
             <button class="cta-button" onclick="showMessage()">Agende uma Consulta Gratuita</button>
         </section>
+        <footer>
+            <p>&copy; 2024 Code Solutions. Todos os direitos reservados.</p>
+        </footer>
     </main>
     <button id="back-to-top" title="Voltar ao topo">↑</button>
     <button id="dark-mode-toggle">🌓</button>
