--- a/pagecode.html
+++ b/pagecode.html
@@ -38,23 +38,23 @@
             <h2>Nossa Equipe</h2>
             <div class="team">
                 <div class="member">
-                    <img src="./src/img/carlos-vitor.webp" alt="Ana Silva">
-                    <h3>Carlos Vítor</h3>
-                    <p>Desenvolvedor em Front-end</p>
-                </div>
-                <div class="member">
-                    <img src="./src/img/arthur-ferreira.webp" alt="Bruno Santos">
+                    <img src="./src/img/arthur-ferreira.webp" alt="Arthur Ferreira">
                     <h3>Arthur Ferreira</h3>
                     <p>Desenvolvedor em Front-end</p>
                 </div>
                 <div class="member">
-                    <img src="./src/img/pablo-arruda.webp" alt="Carla Oliveira">
-                    <h3>Pablo Arruda</h3>
+                    <img src="./src/img/brian-muniz.webp" alt="Brian Muniz">
+                    <h3>Brian Muniz</h3>
                     <p>Desenvolvedor em Front-end</p>
                 </div>
                 <div class="member">
-                    <img src="./src/img/brian-muniz.webp" alt="Daniel Lima">
-                    <h3>Brian Muniz</h3>
+                    <img src="./src/img/carlos-vitor.webp" alt="Carlos Vítor">
+                    <h3>Carlos Vítor</h3>
+                    <p>Desenvolvedor em Front-end</p>
+                </div>
+                <div class="member">
+                    <img src="./src/img/pablo-arruda.webp" alt="Pablo Arruda">
+                    <h3>Pablo Arruda</h3>
                     <p>Desenvolvedor em Front-end</p>
                 </div>
             </div>
@@ -82,11 +82,19 @@
                     <p>Fornecemos orientação estratégica para impulsionar sua transformação digital, ajudando sua
                         empresa a se manter competitiva no mercado.</p>
                 </div>
+                <div class="service-item">
+                    <h3>----------------</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam, iste corporis ab rerum architecto assumenda incidunt, repellat numquam excepturi illum eius dolor natus perspiciatis sunt ullam, fugit sint quam aspernatur eaque labore provident debitis consectetur! Commodi ullam sapiente dolorem neque fugiat qui, quidem labore impedit?</p>
+                </div>
+                <div class="service-item">
+                    <h3>----------------</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam, iste corporis ab rerum architecto assumenda incidunt, repellat numquam excepturi illum eius dolor natus perspiciatis sunt ullam, fugit sint quam aspernatur eaque labore provident debitis consectetur! Commodi ullam sapiente dolorem neque fugiat qui, quidem labore impedit?</p>
+                </div>
             </div>
             <button class="cta-button" onclick="showMessage()">Agende uma Consulta Gratuita</button>
         </section>
         <footer>
-            <p>&copy; 2024 Code Solutions. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Code Solutions. Todos os direitos reservados. | Desde 19/09/2024</p>
         </footer>
     </main>
     <button id="back-to-top" title="Voltar ao topo">↑</button>
