Adicionando Metadados na index.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="CodeSolutions">
+    <meta name="description" content="Transformando ideias em realidade digital com inovação e excelência">
+    <meta name="keywords" content="CodeSolutions, Programação, Desenvolvimento Web">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="copyright" content="CodeSolutions">
     <title>Login</title>
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/login/login.css">
